2018-01-04  Sam Steingold  <sds@gnu.org>

	* modules/gdbm/gdbm.c (gdbm_open_flags): DEFFLAGSET, not DEFCHECKER.
	(GDBM-OPEN): Support all the current open flags.

2018-01-04  Sam Steingold  <sds@gnu.org>

	* clhs.lisp (open-url): Remove an unused variable.

2018-01-04  Sam Steingold  <sds@gnu.org>

	* modules/gdbm/gdbm.c (error_gdbm): Fix declaration for gdbm 1.14.
	(open_gdbm): No need to cast error_gdbm.
	(GDBM:GDBM-COUNT): New function.
	* modules/gdbm/gdbm.lisp: Export it.

2018-01-01  Bruno Haible  <bruno@clisp.org>

	Bump copyright year.
	* COPYRIGHT: Bump year.
	* spvw.d (print_banner): Likewise.

2018-01-01  Bruno Haible  <bruno@clisp.org>

	Tweak mappable address range for Linux/x86_64.
	Reported by Sam Steingold in bug#718.
	* lispbibl.d (MAPPABLE_ADDRESS_RANGE_*, SINGLEMAP_*) [UNIX_LINUX &&
	AMD64]: Define differently.

2018-01-01  Bruno Haible  <bruno@clisp.org>

	Modernization: Use improvements from gnulib and libffcall.
	* m4/as-underscore.m4: Replace with version from GNU libffcall.
	* aclocal.m4, src/configure, src/config.h.in, gllib/*: Regenerated.

2017-12-31  Bruno Haible  <bruno@clisp.org>

	Update Spanish translation.
	* po/es.po: Update from Francisco Javier Serrador.
	* po/es.gmo, po/clisplow_es.*: Regenerated.

2017-12-31  Bruno Haible  <bruno@clisp.org>

	Emit a warning when LOOP is used with unportable syntax.
	* loop.lisp (loop-initialization): Add member 'impdependent-declspec'.
	(expand-loop): Wrap selected initialization forms in LOCALLY with a
	SYS::IMPLEMENTATION-DEPENDENT declaration for variables that are not
	guaranteed to be visible.

2017-12-31  Bruno Haible  <bruno@clisp.org>

	Support new declaration SYS::IMPLEMENTATION-DEPENDENT.
	* lispbibl.d (impdependent): New macro.
	(sym_macrop): Mark as maygc.
	(check_symbol_in_declaration): Renamed from check_symbol_special.
	Add decl_identifier argument.
	* constsym.d: Add SYS::IMPLEMENTATION-DEPENDENT.
	* constobj.d (O(printstring_implementation_dependent)): Add.